Portfolio Tweaks (removed caption, added links, improved styling)

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
                     principal. We develop higher quality software solutions faster 
                     and more cost-effectively than other providers.
                 </p>                
-                <a href="#" class="btn btn-primary btn-xl">Learn More</a>
+                <a href="#contact" class="btn btn-primary btn-xl page-scroll">Learn More</a>
                 <div class="spacer"></div> 
             </div>
         </div>
