--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,171 +1,98 @@
-<section class="no-padding" id="portfolio">
-    <div class="container-fluid">
-        <div class="row no-gutter">
+<section class="bg-primary" id="portfolio">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-heading">The Many Faces of LeanMeanTech Clients</h2>
+                <hr class="light">
+                <p>
+                    From striving forward with small startups to working with Fortune 500 enterprises, LeanMeanTech delivers mobile applications.
+                </p>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-4 col-sm-6 portfolio-popin">
-                <a href="#">
+                <a href="https://www.dropoff.com/" target="_blank">
                     <div class="logo">
                         <img src="{{page.leadingpath}}img/external/portfolio/dropoff_blank.png" class="blank img-responsive" alt="">
                         <img src="{{page.leadingpath}}img/external/portfolio/dropoff_normal.png" class="normal img-responsive" alt="">
                     </div>
                     
-                    <div class="caption">
+                    <!-- <div class="caption">
                         <div class="project-category">
                             Going to Market
                         </div>
-                    </div>
+                    </div> -->
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6 portfolio-popin">
-                <a href="#">
+                <a href="https://www.silvercar.com/" target="_blank">
                     <div class="logo">
                         <img src="{{page.leadingpath}}img/external/portfolio/silvercar_blank.png" class="blank img-responsive" alt="">
                         <img src="{{page.leadingpath}}img/external/portfolio/silvercar_normal.png" class="normal img-responsive" alt="">
                     </div>
                     
-                    <div class="caption">
+                    <!-- <div class="caption">
                         <div class="project-category">
                             Upping the Android Game
                         </div>
-                    </div>
+                    </div> -->
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6 portfolio-popin">
-                <a href="#">
+                <a href="https://www.adidas.com/us/" target="_blank">
                     <div class="logo">
                         <img src="{{page.leadingpath}}img/external/portfolio/adidas_blank.png" class="blank img-responsive" alt="">
                         <img src="{{page.leadingpath}}img/external/portfolio/adidas_normal.png" class="normal img-responsive" alt="">
                     </div>
                     
-                    <div class="caption">
+                    <!-- <div class="caption">
                         <div class="project-category">
                             Partner in Idea Development
                         </div>
-                    </div>
+                    </div> -->
                 </a>
             </div>
-        </div>
-        <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6 portfolio-popin">
-                <a href="#">
+                <a href="https://www.docbookmd.com/" target="_blank">
                     <div class="logo">
                         <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_blank.png" class="blank img-responsive" alt="">
                         <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_normal.png" class="normal img-responsive" alt="">
                     </div>
                     
-                    <div class="caption">
+                    <!-- <div class="caption">
                         <div class="project-category">
                             Compliance and Business Rules
                         </div>
-                    </div>
+                    </div> -->
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6 portfolio-popin">
-                <a href="#">
+                <a href="https://www.homeaway.com/" target="_blank">
                     <div class="logo">
                         <img src="{{page.leadingpath}}img/external/portfolio/homeaway_blank.png" class="blank img-responsive" alt="">
                         <img src="{{page.leadingpath}}img/external/portfolio/homeaway_normal.png" class="normal img-responsive" alt="">
                     </div>
                     
-                    <div class="caption">
+                    <!-- <div class="caption">
                         <div class="project-category">
                             Android Experts
                         </div>
-                    </div>
+                    </div> -->
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6 portfolio-popin">
-                <a href="#">
+                <a href="https://www.honestdollar.com/" target="_blank">
                     <div class="logo">
                         <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_blank.png" class="blank img-responsive" alt="">
                         <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_normal.png" class="normal img-responsive" alt="">
                     </div>
                     
-                    <div class="caption">
+                    <!-- <div class="caption">
                         <div class="project-category">
                             Android Experts
                         </div>
-                    </div>
+                    </div> -->
                 </a>
             </div>
         </div>
-            
-            <!--
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="{{page.leadingpath}}img/portfolio/2.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="{{page.leadingpath}}img/portfolio/3.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="{{page.leadingpath}}img/portfolio/4.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="{{page.leadingpath}}img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="{{page.leadingpath}}img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
--->
 </section>
