Fix Testimony Responsiveness

--- a/_includes/testimony-homeaway.html
+++ b/_includes/testimony-homeaway.html
@@ -1,7 +1,7 @@
 <section class="relative external-homeaway notop nobottom-xs" id="testimony">
     <div class="container">
         <div class="row">
-            <div class="col-md-5 col-md-offset-2 testimony">
+            <div class="col-xs-12 col-sm-8 col-md-5 col-md-offset-2 testimony">
                 <p class="text-faded">
                     ￼￼LeanMeanTech’s deep platform expertise was invaluable to us 
                     from design through implementation and release of our apps. 
@@ -13,7 +13,7 @@
                     guys was a huge benefit.
                 </p>
             </div>
-            <div class="col-md-3 col-md-offset-0 signature wow slideInDown">
+            <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-0 signature wow slideInDown">
                 <div class="triangle visible-xs-block"></div>
                 <div class="spacer"></div>
                 
