Simplified Testimony Text

--- a/_includes/testimony-homeaway.html
+++ b/_includes/testimony-homeaway.html
@@ -2,15 +2,19 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-5 col-md-offset-2 testimony">
-                <p class="text-faded">
-                    ￼￼LeanMeanTech’s deep platform expertise was invaluable to us 
+                <p class="text-faded text-big">
+                    <span class="text-quote">&ldquo;</span>
+                    LeanMeanTech’s deep platform expertise was invaluable to us 
                     from design through implementation and release of our apps. 
+                    <!--
                     In particular, LeanMeanTech’s advice and quick turnaround 
                     during the prototyping phase raised our confidence that we 
                     were making the right design decisions for our app. In 
                     addition, being able to offload implementation of some of 
                     the most complicated platform-specific UIs to the LeanMean 
                     guys was a huge benefit.
+                    -->
+                    <span class="text-quote">&rdquo;</span>
                 </p>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-0 signature wow slideInDown">
