--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -452,6 +452,10 @@ section#testimony {
         margin-top: 0px;
     }
     
+    .text-big {
+        font-size: 1.5em;
+    }
+    
     .signature {
         text-align: right;        
     }
