Testimony Carousel WIP

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,7 @@
   {% include nav.html %}
   {% include header.html %}
   {% include about.html %}
-  {% include testimony-homeaway.html %}
+  {% include testimony-carousel.html %}
   {% include about-followup.html %}
   
   {% comment %}
