Fixed flash of unloaded background

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,5 +32,13 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    <noscript>
+        <style type="text/css">
+            #blankout {display: none !important;}
+        </style>
+    </noscript>
 
 </head>
+
+<div id="blankout"></div>
