--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             <span class="big">Building the Future,</span><br />
-            <span class="big" id="header-type-effect">&nbsp;</span>
+            <span class="big" id="header-type-effect"><noscript>App by App</noscript>&nbsp;</span>
                 
 		<p>Application development, focusing on cutting-edge mobile challenges.</p>
         
@@ -13,6 +13,6 @@
         -->
         </div>
     </div>
-    
+        
     <a href="#about" class="header-footer extra-bottom page-scroll"></a>
 </header>
