--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,13 +25,10 @@
                 </li>
                 -->
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#portfolio">Featured Clients</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-                <li>
-                    <a target="_blank" href="http://volny.github.io/creative-theme-jekyll/">Template</a>
                 </li>
             </ul>
         </div>
