"Get in Touch" Header Button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,14 @@
         <div class="header-content-inner">
             <span class="big">Building the Future,</span><br />
             <span class="big" id="header-type-effect"><noscript>App by App</noscript>&nbsp;</span>
-                
-		<p>Application development, focusing on cutting-edge mobile challenges.</p>
         
-        <div class="spacer"></div>
-        
-        <!--
-		<a href="#about" class="btn btn-primary btn-xl btn-flat page-scroll">Find Out More</a>
-        -->
+    		<p>Application development, focusing on cutting-edge mobile challenges.</p>
+            
+            <div class="spacer"></div>
+            
+            <div class="btn-container">
+        		<a href="#contact" class="btn btn-primary btn-xl page-scroll">Get in Touch</a>
+            </div>
         </div>
     </div>
         
