--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -365,6 +365,18 @@ header {
                 margin: 50px 0px 50px 15px;
                 text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
             }
+            
+            .btn-container {
+                @media (max-width: 768px) {
+                    text-align: center;
+                }
+            }
+            
+            .btn {
+                @media (min-width: 768px) {
+                    margin: 0px 0px 0px 10px;
+                }
+            }
         }
     }
     
