--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -4,6 +4,8 @@
 {% include head.html %}
 
 <body id="page-top">
+  <div id="blankout"></div>
+      
   {% include nav.html %}
   {% include header.html %}
   {% include about.html %}
