Disable auto-transition on carousel for xs devices

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,3 +16,4 @@
         
     <a href="#about" class="header-footer extra-bottom page-scroll"></a>
 </header>
+<div id="xs-test" class="visible-xs-block"></div>
