--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,6 +52,11 @@ p {
     margin-bottom: 20px;
 }
 
+.xs-test {
+    height: 0px;
+    display: none;
+}
+
 .bg-primary {
     background-color: $theme-primary;
 }
