--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,14 +6,6 @@
                 <h2 class="section-heading callout">Get in touch!</h2>
                 <!-- <hr> -->
                 <br /><br />
-                <p class="text-faded">
-                    Ready to start your next project with us? That's great! 
-                    Fill out our contact form or send us an email 
-                    and we will get back to you as soon as possible!
-                </p>
-                <p class="">
-                    <span id="obf"></span>
-                </p>
             </div>
             <div class="col-lg-3 col-lg-offset-1" id="contact_form">
                 <div class="success">
@@ -46,7 +38,7 @@
                         <span class="help-block">Invalid Email</span>
                     </div>
                     <div class="form-group">
-                        <label for="contact_message">Message (Optional)</label>
+                        <label for="contact_message">Message</label>
                         <textarea class="form-control" rows="2" id="contact_message"></textarea>
                     </div>
                     <div class="form-group" style="display:none">
