Require Message on Contact Form

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,7 +16,7 @@
                     </p>
                 </div>
                 <div class="pending">
-                    <h2 class="section-heading">Hold Tight...<h2>
+                    <h2 class="section-heading">Hold Tight...</h2>
                 </div>
                 <div class="failure">
                     <h2 class="section-heading">Oops<h2>
@@ -40,6 +40,7 @@
                     <div class="form-group">
                         <label for="contact_message">Message</label>
                         <textarea class="form-control" rows="2" id="contact_message"></textarea>
+                        <span class="help-block">Please leave a short message</span>
                     </div>
                     <div class="form-group" style="display:none">
                         <input type="text" name="_gotcha" style="display:none" />
