HTML is hard (fixed markup errors)

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,5 @@
 <section id="contact" class="bg-light">
     <div class="container">
-        
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
                 <h2 class="section-heading callout">Get in touch!</h2>
@@ -19,7 +18,7 @@
                     <h2 class="section-heading">Hold Tight...</h2>
                 </div>
                 <div class="failure">
-                    <h2 class="section-heading">Oops<h2>
+                    <h2 class="section-heading">Oops</h2>
                     <p class="text-faded">
                         Something went wrong, please send us an email instead.
                     </p>
@@ -48,5 +47,6 @@
                     <button type="submit" class="btn btn-primary btn-xl pull-right">Submit</button>
                 </form>
             </div>
+        </div>
     </div>
 </section>
