--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 <!-- Header Loading Hint, update _base.css header selector too -->
-<img id="blankout-hint" src="{{page.leadingpath}}/img/header/8.jpg" height="1" width="1">
+<img id="blankout-hint" src="{{page.leadingpath}}/img/header/8.jpg" height="1" width="1" alt="">
 
 <!-- jQuery -->
 <script src="{{page.leadingpath}}js/jquery.js"></script>
