--- a/_includes/testimony-carousel-adidas.html
+++ b/_includes/testimony-carousel-adidas.html
@@ -16,7 +16,7 @@
                 
                 <h2>Jon Werner</h2>
                 <h5>Innovation Explorer at adidas</h5>
-                <img src="{{page.leadingpath}}img/external/logo-adidas.png" class="logo" />
+                <img src="{{page.leadingpath}}img/external/logo-adidas.png" class="logo" alt="adidas" />
                 
                 <div class="spacer"></div>
                 <!--
