--- a/_includes/testimony-carousel-homeaway.html
+++ b/_includes/testimony-carousel-homeaway.html
@@ -23,7 +23,7 @@
                 
                 <h2>Alex Devine</h2>
                 <h5>Director of Engineering, Mobile</h5>
-                <img src="{{page.leadingpath}}img/external/logo-homeaway.svg" class="logo" />
+                <img src="{{page.leadingpath}}img/external/logo-homeaway.svg" class="logo" alt="HomeAway" />
                 
                 <div class="spacer"></div>
                 <!--
