--- a/_includes/testimony-carousel-silvercar.html
+++ b/_includes/testimony-carousel-silvercar.html
@@ -15,7 +15,7 @@
                 
                 <h2>Allen Darnell</h2>
                 <h5>Chief Technology Officer</h5>
-                <img src="{{page.leadingpath}}img/external/logo-silvercar.png" class="logo" />
+                <img src="{{page.leadingpath}}img/external/logo-silvercar.png" class="logo" alt="Silvercar" />
                 
                 <div class="spacer"></div>
                 <!--
