--- a/css/main.scss
+++ b/css/main.scss
@@ -37,6 +37,7 @@
 $theme-primary: #a92d2d;
 $theme-dark: #424342;
 
+$section-padding-tiny: 25px;
 $section-padding-small: 50px;
 $section-padding-large: 100px;
 
