Attempt at better mobile carousel

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,6 +3,8 @@
 
 <!-- jQuery -->
 <script src="{{page.leadingpath}}js/jquery.js"></script>
+<script src="{{page.leadingpath}}js/jquery.mobile.js"></script>
+
 
 <!-- Bootstrap Core JavaScript -->
 <script src="{{page.leadingpath}}js/bootstrap.min.js"></script>
