--- a/_includes/testimony-carousel-homeaway.html
+++ b/_includes/testimony-carousel-homeaway.html
@@ -15,6 +15,11 @@
                     guys was a huge benefit.
                     -->
                     <span class="text-quote">&rdquo;</span>
+                    <ol class="carousel-indicators-inner visible-xs-block">
+                        <li></li>
+                        <li></li>
+                        <li class="active"></li>
+                    </ol>
                 </p>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-0 signature">
