--- a/_includes/testimony-carousel-silvercar.html
+++ b/_includes/testimony-carousel-silvercar.html
@@ -8,6 +8,11 @@
                     staff augmentation, or architectural consulting.
                     <span class="text-quote">&rdquo;</span>
                 </p>
+                <ol class="carousel-indicators-inner visible-xs-block">
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ol>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-0 signature">
                 <div class="triangle visible-xs-block"></div>
