--- a/_includes/testimony-carousel.html
+++ b/_includes/testimony-carousel.html
@@ -1,6 +1,6 @@
 <div id="testimony" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
-  <ol class="carousel-indicators">
+  <ol class="carousel-indicators hidden-xs">
     <li data-target="#testimony" data-slide-to="0" class="active"></li>
     <li data-target="#testimony" data-slide-to="1"></li>
     <li data-target="#testimony" data-slide-to="2"></li>
@@ -20,11 +20,11 @@
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#testimony" role="button" data-slide="prev">
+  <a class="left carousel-control hidden-xs" href="#testimony" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#testimony" role="button" data-slide="next">
+  <a class="right carousel-control hidden-xs" href="#testimony" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
