--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -521,6 +521,40 @@ header {
         //     min-height: 375px;
         // }
     }
+    
+    .carousel-indicators-inner {
+        display: none;
+        
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        z-index: 15;
+        width: 60%;
+        padding-left: 0;
+        margin-left: -30%;
+        text-align: center;
+        list-style: none;
+        
+        li {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            margin: 1px;
+            text-indent: -999px;
+            cursor: pointer;
+            background-color: #000 \9;
+            background-color: rgba(0, 0, 0, 0);
+            border: 1px solid #fff;
+            border-radius: 10px;
+        }
+        
+        .active {
+            width: 12px;
+            height: 12px;
+            margin: 0;
+            background-color: #fff;
+        }
+    }
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
@@ -586,7 +620,7 @@ section.section-testimony {
         }
     }
         
-    @media (max-width: 576px) {
+    @media (max-width: 768px) {
         .testimony {
             min-height: 205px;
         }
