--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -14,5 +14,8 @@
 <!-- <script src="{{page.leadingpath}}js/jquery.fittext.js"></script> -->
 <script src="{{page.leadingpath}}js/wow.min.js"></script>
 
+<!-- Mapbox -->
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.js'></script>
+
 <!-- Custom Theme JavaScript -->
 <script src="{{page.leadingpath}}js/creative.js"></script>
