--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,11 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="{{page.leadingpath}}css/animate.min.css" type="text/css">
 
-    <link rel="stylesheet" href="{{page.leadingpath}}css/main.css" type="text/css">
     <!-- Uses SubtlePatterns -->
+    <link rel="stylesheet" href="{{page.leadingpath}}css/main.css" type="text/css">
+    
+    <!-- Mapbox -->
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.css' rel='stylesheet' />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
