Load Mapbox Dynamically

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -912,6 +912,7 @@ section.section-testimony {
     // }
     
     #map {
+        display: none;
         background: $theme-dark;
         min-height: 200px;
     }
